2000-05-24  Richard Kreckel  <kreckel@ginac.de>

        * autoconf/config.*: Updated to new version from FSF
          (the new libtool wants this).
        * src/Makefile.in: added $(LDFLAGS) to link step.
        * src/base/digitseq/cl_2DS_div.cc, cl_2DS_recip.cc: Adjusted 
          break-even points.

2000-05-23  Bruno Haible  <haible@clisp.cons.org>

        * autoconf/aclocal.m4 (CL_CANONICAL_HOST): Determine host_cpu,
          host_vendor, host_os correctly if $host has more than two hyphens.

2000-05-19  Richard Kreckel  <kreckel@ginac.de>

        * src/base/digitseq/cl_DS_mul.cc: Rearranged break-even points to
          better match present-day CPUs whenever GMP3 is used.
        * src/base/digitseq/cl_DS_div.cc: dto. 
        * src/TUNING: Added comment about order of tuning.
        * configure, configure.in: Safer GMP3-detection.
        * INSTALL.generic: Clarified behaviour of --with-gmp.
        * autoconf/config.guess: updated from Clisp-2000-03-06 sources.

2000-05-05  Richard Kreckel  <kreckel@ginac.de>

        * doc/cln.tex: Added index entries.
        * doc/texinfo.tex: Upgraded to newer version 1999-10-01.07.
        * doc/*: Changes triggered.

2000-05-04  Richard Kreckel  <kreckel@ginac.de>

        * gmp/: removed completely.  From now on we are going to link
          externally against libgmp3.0 or above!
        * configure, configure.in, Makefile.in, */Makeflags: removed support
          of internal gmp 2.0.2, like $GMP_INCLUDES, which should be done by
          setting $CPPFLAGS instead.
        * Makefile.in: Added libtool inter-library dependency for -lgmp and
          conforming interface versioning (-version-info).
        * autoconf/ltconfig, autoconf/ltmain.sh: Updated to newer versions
          from libtool 1.3.4.

2000-02-22  Bruno Haible  <haible@clisp.cons.org>

        * src/base/digitseq/cl_asm_mips_.cc: Starting at argument 5 the
          parameter passing was changed for the MIPS n32 ABI.
